# matome-site-generator

./: .gitignore  README.md  README_en.md  pyproject.toml  実装プラン- 2ch:5chまとめ風AI議論ジェネレーター.txt  実装プラン- 2ch:5chまとめ風AI議論ジェネレーター.txt
config/: presets.json  settings.yaml.example
docs/: DELETION_LOG.md
src/: app.py
src/agents/: discussion.py  image_analyzer.py  persona.py  summarizer.py
src/formatter/: html_renderer.py  json_exporter.py  text_exporter.py
src/models/: client_factory.py
src/templates/: matome.css
src/utils/: rate_limiter.py  web_fetcher.py
tests/: test_app.py  test_discussion.py  test_image_analyzer.py  test_summarizer.py
